[project]
name = "state-machine-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "fastapi>=0.115.8",
    "langchain>=0.3.17",
    "langchain-community>=0.3.16",
    "langchain-openai>=0.3.3",
    "langgraph>=0.2.69",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "isort>=5.13.2",
    "black>=24.10.0",
    "ruff>=0.7.4",
    "pytest-asyncio>=0.24.0",
]

